--- a/article/experiment_2.tex
+++ b/article/experiment_2.tex
@@ -123,7 +123,7 @@
  		f(\{\text{会飞}, \text{下蛋}\}) = \text{鸟}
  	\end{equation*} \par
  	于是可以把输入的事实看成一个集合$ I $，如果$ I \in R $，那么存在某个$ y \in C $，使得$ f(I) = y $，如果$ I \notin R $，如果能通过\textbf{添加元素规则}向$ I $中添加有限个元素后，得到成$ I' $，使得$ I'=I_1 \cup \cdots \cup I_n $，其中$ I_i \in R \quad (\forall i = 1, 2, \cdots, n) $，则在这种\textbf{添加元素规则}下，集合$ I $可以推出的结论为$ f(I_n) $，否则集合$ I $不能推出任何结论。下面定义\textbf{添加元素规则：} \par 
- 	\textbf{定义2.2.1} 如果有$ I \notin R $，$ I_1, I_2, \cdots I_r \in R $，且$ I_1 \subset I $，那么就令
+ 	\textbf{定义2.2.1} 如果有$ I \notin R $，$ I_1, I_2, \cdots I_r \in R $，且$ I_1, I_2, \cdots, I_r \subset I $，那么就令
  	\begin{equation*}
  		I_{r+1} = \left(I - \sum\limits_{i=1}^{r}I_i\right) \bigcup\limits_{i=1}^{r} \{f(I_i)\}
  	\end{equation*}
@@ -171,8 +171,23 @@
  		            if flag == len(self.rulebase) and len(keywords) != 0:
  		                self.conclusion = list()
  		                break
+ 	\end{lstlisting} \par 
+ 	将规则保存至rule.txt文档中，读入规则集，并将每条规则用$ Rule $类初始化，逐条添加至列表中。\par 
+ 	\begin{lstlisting}[style=Python]
+ 		class Rule(object):
+ 		    """
+ 		    description: 存储规则的数据结构
+ 		    """
+ 		
+ 		    def __init__(self, rule) -> None:
+ 		        self.condition = set(rule[0: -1])
+ 		        self.conclusion = rule[-1]
+ 		
+ 		    
+ 		    def toString(self):
+ 		        return str(self.condition) + '  ->  ' + str(self.conclusion) + '\n'
  	\end{lstlisting}
- 	读入规则集
+ 	从rule.txt文档中读入规则集代码\par 
  	\begin{lstlisting}[style=Python]
  		    def initialize_rulebase(self):
  		        """
@@ -186,6 +201,18 @@
  		            for rule in rules:
  		                if len(rule) != 0:
  		                    self.rulebase.append(Rule(rule.split(" ")))
+ 	\end{lstlisting}
+ 	向rule.txt文档中添加规则的代码\par 
+ 	\begin{lstlisting}[style=Python]
+ 		    def add_rule(self, rule):
+ 		        """
+ 		        description: 添加新规则
+ 		        param: rule 新的规则字符串类型
+ 		        Returns: None
+ 		        """
+ 		        with open(file=self.path, mode='a', encoding='utf_8') as file:
+ 		            file.writelines(rule + "\n")
+ 		        self.rulebase.append(Rule(rule.split(" ")))
  	\end{lstlisting}
  	\newpage
  	\noindent
